--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world world!
+- script: echo Hello, world!
   displayName: 'Run a one-line script'
 
 - script: |
